deploy: 00a4546d5449bea1d1bc63932868b361dff07d9e

--- a/toc.html
+++ b/toc.html
@@ -16,7 +16,7 @@
                     <a href="index.html" name="articles/toc.html" title="Documentation">Documentation</a>
                 </li>
                 <li>
-                    <a href="api/TinkState.html" name="api/toc.html" title="API">API</a>
+                    <a href="api/TinkState.yml" name="" title="API">API</a>
                 </li>
                 <li>
                     <a href="https://github.com/nadako/TinkStateSharp" name="" title="Repository">Repository</a>
